Fixed overflow in some components

--- a/src/core/app/App.css
+++ b/src/core/app/App.css
@@ -1,3 +1,10 @@
 .App {
   text-align: center;
 }
+
+#root {
+  display: grid;
+  min-height: 100vh;
+  grid-template-rows: auto 1fr auto;
+  overflow-x: hidden;
+}
