--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,6 @@
 }
 html {
   font-size: 62.5%;
-  min-height: 100vh;
-  position: relative;
-  padding-bottom: 25rem;
 }
 
 body {
@@ -27,17 +24,5 @@ body {
 @media (max-width: 44em) {
   html {
     font-size: 50%;
-  }
-}
-
-@media (max-width: 40em) {
-  html {
-    padding-bottom: 30rem;
-  }
-}
-
-@media (max-width: 34.375em) {
-  html {
-    padding-bottom: 40rem;
   }
 }
